--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "quasar-app",
   "version": "0.0.1",
   "description": "Clinalamo Mobile",
+  "homepage": "https://akumamos.github.io/smartableways",
   "author": "João Coelho",
   "scripts": {
     "clean": "node build/script.clean.js",
     "dev": "node build/script.dev.js",
     "build": "node build/script.build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "deploy": "node ./node_modules/vue-gh-pages/index.js"
   },
   "dependencies": {
     "babel-runtime": "^6.25.0",
     "quasar-extras": "0.x",
     "quasar-framework": "^0.14.6",
     "vue": "^2.5.2",
+    "vue-cli-ghpages": "^1.0.0",
+    "vue-gh-pages": "^1.7.0",
     "vue-router": "^2.7.0",
     "vuex": "^3.0.1"
   },
