--- a/docs/statics/manifest.json
+++ b/docs/statics/manifest.json
@@ -13,7 +13,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/index.html",
+  "start_url": "https://akumamos.github.io/pwa/#/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#027be3"
